DSS-3610: Make NAME case insensitive in REST and GUI with tests
