# signserver/doc/openapi.yaml
@@ -182,6 +182,8 @@ paths:
         in: header
         name: X-Keyfactor-Requested-With
         required: true
+        schema:
+          type: object
       responses:
         "200":
           description: OK
@@ -282,6 +284,8 @@ paths:
         in: header
         name: X-Keyfactor-Requested-With
         required: true
+        schema:
+          type: object
       responses:
         "200":
           description: Workers successfully reloaded
@@ -464,6 +468,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorMessage405"
+        "409":
+          description: Worker already exists.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorMessage409"
         "500":
           description: The server were unable to process the request. See server-side
             logs for more details.
@@ -546,6 +556,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorMessage405"
+        "409":
+          description: Worker already exists.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorMessage409"
         "500":
           description: The server were unable to process the request. See server-side
             logs for more details.
